--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -2,7 +2,7 @@
 <header class="navbar">
   <div class="navbar-container">
     <a (click)="closeMenu()" class="navbar-logo animated-logo" routerLink="/">
-      <img alt="Nayborly Logo" class="navbar-logo-img" src="/favicon.svg"/> Nayborly
+      <img alt="Nayborly Logo" class="navbar-logo-img" height="60" ngSrc="/favicon.svg" width="230"/> Nayborly
     </a>
     <button
       (click)="toggleMenu()"
